* GLFW plugins are now the default plugins for embedded mode. SFML plugins are still the only existing plugins for non-embedded mode.
* GLFW and SDL plugins also use SOIL library for handling graphic files I/O
* Fixed incorrectly names joystick axes
* Added orxObject_BoxPick() for picking objects intersecting with box
* Added orxMOUSE_X and orxMOUSE_Y as valid inputs for the generic input system
* Added HSL/HSV color space support with HSL<->RGB & HSV<->RGB conversion functions
* Added ParentCamera property for cameras (useful for cascading cameras or Fixed/UI camera trick for portrait<->landscape adaptation)
* When selecting a new locale language at runtime, graphics containing localized text will now resize accordingly to the text's new size
* Added __orxFREEBASIC__ define for free basic friendly build of orx
* orxClock_RemoveTimer() can now filter using the registered context
* Added events orxCONFIG_EVENT_RELOAD_START, orxCONFIG_EVENT_RELOAD_END & orxCONFIG_EVENT_INVALID_TYPE_ACCESS
* Added some new orxConfig_* functions for advanced config manipulations
* Working directory is set to executable's one for all platforms (was done only for Mac OS X before)
* Fixed constness of all orxSTRING related code
* Fixed FPS display position when aspect ratio is not 1:1
* Removed a couple of warnings from external library Box2D
* Fixed some minor issues in SFML-based sound plugin
* Config raw sections/values can now be accessed at runtime (used in EyeCreate's orx config editor Pey)
* Fixed sound attenuation ratio in SFML plugin
* Added Config::IgnorePath parameter to ignore all paths when loading resources (useful for iPhone bundles were all files easily end up in the root folder)
* Modules' Init & Exit functions are now optional (ie. stand alone application don't have to define them if not needed).
* Default minimal frequency for the home made renderer plugin is now 10Hz (was 60Hz).
* Fixed orxLOCALE_EVENT_SET_STRING not sent
* Some optims / fixes / cleaning

orx 1.1
-----