@@ -17,6 +17,8 @@ orx 1.2
 * GLFW plugins are now the default plugins for embedded mode. SFML plugins are still the only existing plugins for non-embedded mode.
 * GLFW and SDL plugins also use SOIL library for handling graphic files I/O
 * Fixed incorrectly names joystick axes
+* Added orxBank_GetIndex() & orxBank_GetAtIndex() for array-like manipulations
+* Heavy optims in the orxBANK module when allocating cells and clearing banks
 * Added orxObject_BoxPick() for picking objects intersecting with box
 * Added orxMOUSE_X and orxMOUSE_Y as valid inputs for the generic input system
 * Added HSL/HSV color space support with HSL<->RGB & HSV<->RGB conversion functions
